--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.0",
+    "@nuxtjs/axios": "^5.9.7",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "chart.js": "^2.9.3",
@@ -68,8 +69,8 @@
     "nuxt-purgecss": "^0.2.1",
     "nuxt-svg-loader": "^1.2.0",
     "prettier": "^1.19.1",
-    "stylelint": "^13.2.0",
     "rimraf": "^3.0.2",
+    "stylelint": "^13.2.0",
     "vue-axe": "^1.0.8",
     "vue-jest": "^4.0.0-0"
   }
