--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dayjs": "^1.8.21",
     "express": "^4.16.4",
     "nuxt": "^2.11.0",
+    "nuxt-env": "^0.1.0",
     "nuxt-i18n": "^6.6.0",
     "vue-chartjs": "^3.5.0",
     "vue-property-decorator": "^8.4.0",
