--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "varusan",
+      "name": "Subaru Nakamura",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/35091584?v=4",
+      "profile": "https://twitter.com/varu_3",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
