Add @shmokmt as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,6 +27,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "shmokmt",
+      "name": "Shoma Okamoto",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/32533860?v=4",
+      "profile": "https://shmokmt.github.io/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
