Add @satetsu as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,6 +36,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "satetsu",
+      "name": "satetsu",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/8390269?v=4",
+      "profile": "https://github.com/satetsu",
+      "contributions": [
+        "business"
+      ]
     }
   ],
   "contributorsPerLine": 7
