--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nuxtjs/vuetify": "^1.0.0",
     "@types/chart.js": "^2.9.14",
     "@vue/test-utils": "^1.0.0-beta.27",
+    "all-contributors-cli": "^6.14.2",
     "babel-jest": "^24.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
